# diffcast

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/export-state/: b8d393f61ea7165b.json  dcf874b7b18d7243.json
configs/: default.yaml
scripts/: download_data.py  evaluate.py  prepare_dataset.py  train.py
src/diffcast/: __init__.py  cli.py
src/diffcast/data/: __init__.py  dataset.py  pipeline.py  schema.py
src/diffcast/data/sources/: __init__.py  calendar.py  entsoe.py  weather.py
src/diffcast/evaluation/: __init__.py  metrics.py  visualization.py
src/diffcast/inference/: __init__.py  forecast.py
src/diffcast/models/: __init__.py
src/diffcast/models/baselines/: __init__.py  persistence.py  quantile_regression.py
src/diffcast/models/csdi/: __init__.py  conditioning.py  diffusion.py  model.py  transformer.py
src/diffcast/training/: __init__.py  losses.py  scheduler.py  trainer.py
tests/: __init__.py  test_baselines.py  test_metrics.py  test_model.py
