[project]
name = "diffcast"
version = "0.1.0"
description = "Diffusion-based day-ahead electricity price forecasting for Nord Pool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "torch>=2.0",
    "lightning>=2.0",
    "einops",

    # Data
    "polars>=0.20",
    "pyarrow",
    "entsoe-py",
    "requests",
    "holidays",

    # Config & CLI
    "hydra-core>=1.3",
    "typer",

    # Evaluation & visualization
    "properscoring",
    "matplotlib",
    "seaborn",

    # Utils
    "pydantic>=2.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
diffcast = "diffcast.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diffcast"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
